# ollama-bench

./: .gitignore  LICENSE  Makefile  README.md  bench.py  benchmark_ollama.py  prompts.txt  pyproject.toml
.github/workflows/: lint.yml
src/: bench.py
