[project]
name = "ollama-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.0",
    "loguru>=0.7.3",
    "ollama>=0.4.7",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.9.3",
]
